<?xml version="1.0"?>
<package format="3">
  <name>merge_arrays</name>
  <version>0.0.1</version>
  <description>Merge two sorted Int32MultiArray topics into one sorted array.</description>

  <maintainer email="clo34@wisc.edu">Charles Lo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
